--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://bertya.github.io/gnote/gymnote.ipa</string>
+					<string>https://bertya.github.io/gnote/gymmore.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,13 +29,13 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>gnote.bing.bai</string>
+				<string>gymore.bing.bai</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>gymnote</string>
+				<string>gymmore</string>
 			</dict>
 		</dict>
 	</array>
